--- a/hyyj/hyyj_web/src/main/resources/static/hyyj/css/error.css
+++ b/hyyj/hyyj_web/src/main/resources/static/hyyj/css/error.css
@@ -31,7 +31,7 @@ body {
   background: url("../images/error/mars.svg") no-repeat bottom center;
   background-size: cover;
 }
-
+/*xiu*/
 .logo-404 {
   position: absolute;
   margin-left: auto;
